# mcp-server

./: .copier-answers.yml  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yaml
docs/jekyll/: _config.yml
docs/jekyll/_includes/: project_changelog.md  project_readme.md
docs/jekyll/_site/: feed.xml  index.html
docs/jekyll/_site/assets/css/: just-the-docs-dark.css  just-the-docs-dark.css.map  just-the-docs-default.css  just-the-docs-default.css.map  just-the-docs-light.css  just-the-docs-light.css.map
docs/jekyll/_site/assets/js/: just-the-docs.js  search-data.json
docs/jekyll/_site/changelog/: index.html
docs/jekyll/_site/docs/build-tools/: index.html
docs/jekyll/_site/docs/getting-started/: index.html
docs/jekyll/_site/docs/usage/: index.html
docs/jekyll/docs/: build-tools.md  getting-started.md  usage.md
examples/: mcp_workflow_demo.py
src/clearskies_mcp_server/: __init__.py  introspection.py  known_modules.py  module_discovery.py  server.py
src/clearskies_mcp_server/concepts/: __init__.py  advanced.py  authentication.py  backends.py  base_classes.py  core.py  data.py  devex.py  di.py  features.py  internals.py  lifecycle.py  observability.py  programming.py  reference.py
src/clearskies_mcp_server/examples/: __init__.py  advanced_queries.py  api_backend.py  audit_trail.py  authentication.py  authorization.py  cli_app.py  configuration.py  endpoint_group.py  error_handling.py  hierarchical_data.py  migrations.py  pivot_data.py  relationships.py  restful_api.py  secrets_backend.py  state_machine_advanced.py  testing.py
src/clearskies_mcp_server/migration/: README.md  __init__.py  analyzer.py  auth_migrator.py  generators.py  import_organizer.py  mapper.py  mixin_detector.py  models.py  parsers.py  type_hint_generator.py  validator.py
src/clearskies_mcp_server/resources/: __init__.py  docs.py  examples.py  migration.py  modules.py  style.py
src/clearskies_mcp_server/tools/: __init__.py  documentation.py  generation.py  migration.py  modules.py  scaffolding.py
tests/: test_introspection.py  test_mcp_server_flow.py
